Implemented fast session switching for same-day sessions.
If there is more than one session on the same day, when taking attendance
a dropdown list will allow to switch over sessions easily.

Also fixed some XHTML compliance tags.

--- a/lang/es_utf8/help/attforblock/createmultiplesessions.html
+++ b/lang/es_utf8/help/attforblock/createmultiplesessions.html
@@ -2,7 +2,7 @@
 
 <p align="left"><strong>Crear Múltiples Sesiones</strong></p>
 <p align="left">Esta función le permite crear múltiples sesiones en un único paso. <br />
-  <strong>Fecha de Inicio de Sesión</strong>: seleccione la fecha de inicio de su curso<F2> asignatura 
+  <strong>Fecha de Inicio de Sesión</strong>: seleccione la fecha de inicio de su curso o asignatura
   (el primer día de clase).<br><strong>Fecha de Fin de Sesión</strong>: indique aquí el último día de clase
   (el último día en que usted quiera tomar asistencia). <br />
   <strong>Días de Sesión</strong>: Seleccione los días de la semana en los que tenga clase.<br />
